--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@
 # --- Required options --- #
 
 # Name of website
-title: My Website
+title: Jacob's Website
 
 # Your name to show in the footer
-author: Some Person
+author: Jacob Castro
 
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
+  About Me: "Data Analtics Student From ASU residing in Massachusetts"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
