--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "OneDrive/Pictures/asu.png/"
+avatar: "_assets/_images/ to assets/asu.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -39,7 +39,7 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "jcastr56@asu,edu" 
+  email: "jcastr56@asu.edu" 
   github: JayCastro
   instagram: jaycastro1
 #  reddit: yourname
@@ -93,10 +93,10 @@ feed_show_tags: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
+navbar-col: "#ff1a1a"
 navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
-page-col: "#FFFFFF"
+navbar-border-col: "#ffff80"
+page-col: "#cccccc"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
