--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ navbar-links:
     - Learn markdown: "https://www.markdowntutorial.com/"
   Author's home: "https://github.com/JayCastro"
 
-# --- Logo --- #
 
+# --- Logo --- #
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
 avatar: "/assets/img/cool-profile-icon-9.jpg"
@@ -174,6 +174,9 @@ footer-link-col: "#404040"
 #    secret   : # ENCRYPT your password by going to https://staticman3.herokuapp.com/v3/encrypt/<your-site-secret>
 
 # --- Misc --- #
+# Character used to separate site title and description in HTML document title
+# and RSS feed title
+title-separator: "-"
 
 # Ruby Date Format to show dates of posts
 date_format: "%B %-d, %Y"
@@ -208,6 +211,10 @@ defaults:
       path: "" # any file that's not a post will be a "page" layout by default
     values:
       layout: "page"
+      show-avatar: true
+      
+      # Use tags index page and make tags on each post clickable
+link-tags: true
 
 # Exclude these files from production site
 exclude:
