--- a/_config.yml
+++ b/_config.yml
@@ -226,6 +226,21 @@ exclude:
   - README.md
   - screenshot.png
   - docs/
+  
+  # prose.io config
+prose:
+  rooturl: '_posts'
+  media: 'img'
+  ignore:
+    - 404.html
+    - LICENSE
+    - feed.xml
+    - _config.yml
+    - /_layouts
+    - /_includes
+    - /css
+    - /img
+    - /js
   metadata:
     _posts:
       - name: "layout"
@@ -263,6 +278,7 @@ exclude:
           element: "checkbox"
           label: "Publish"
           help: "Check to publish post, uncheck to hide."
+
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
