--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-    Getting Started: "naruto1"
+    - Getting Started: "naruto1"
+      
   Author's home: "https://github.com/JayCastro"
 
 
