--- a/_config.yml
+++ b/_config.yml
@@ -82,11 +82,13 @@ url-pretty: "JacobsWebsite.com"
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
 
+title-separator: "-"
+
 # Whether or not to show an excerpt for every blog post in the feed page
-feed_show_excerpt: false
+#feed_show_excerpt: false
 
 # Whether or not to show a list of tags below each post preview in the feed page
-feed_show_tags: true
+#feed_show_tags: true
 
 # The keywords to associate with your website, for SEO purposes
 #keywords: "my,list,of,keywords"
