--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ navbar-links:
     - Learn markdown: "https://www.markdowntutorial.com/"
     - Getting Started: "gettingstarted"
     - Table Demo: "table-demo" 
+    - Code Through: "Code-Through-Castro-attempt2"
       
   Author's home: "https://github.com/JayCastro"
 
